--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,26 +3,21 @@ on:
   push:
     paths:
       - 'sites/**'
-  pull_request:
-    paths:
-      - 'sites/**'
 
+permissions:
+  contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          pip install mkdocs-material
-
-      - name: Build and deploy documentation
-        run: |
-          mkdocs gh-deploy --force
+          python-version: 3.x
+      - run: pip install mkdocs-material 
+      - name: Deploy
+        uses: mhausenblas/mkdocs-deploy-gh-pages@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONFIG_FILE: sites/mkdocs.yml
+          EXTRA_PACKAGES: build-base
