--- a/sites/mkdocs.yml
+++ b/sites/mkdocs.yml
@@ -3,11 +3,10 @@ site_description: Terracotta
 site_dir: sites
 repo_url: https://github.com/burningtnt/Terracotta
 repo_name: Terracotta
-# site_url: https://zkitefly.github.io/Terracotta/
 theme:
   name: material
   language: zh
-  favicon: icon.ico
+  favicon: ../icon.ico
   features:
     - navigation.instant
     - navigation.tracking
