--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,8 +41,10 @@ jobs:
           gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu \
           gcc-mingw-w64-x86-64 \
           musl-tools musl-dev mingw-w64
-    - name: Install cross-compliers for MUSL
+    - name: Install cross-compliers for musl
       uses: Lesmiscore/musl-cross-compilers@master
+      with:
+        target: "aarch64-linux-musl"
     - uses: Timmmm/setup-osxcross@main
       name: Install cross-compilers for MacOS (Only Apple Can Do)
       with:
