--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,7 +37,7 @@ jobs:
     - name: Install cross-compilers
       run: |
         sudo apt update
-        sudo apt install --yes --no-install-recommends \
+        sudo apt install --yes --no-install-recommends build-essential clang lld \
           gcc-x86-64-linux-gnu g++-x86-64-linux-gnu \
           gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu \
           gcc-mingw-w64-x86-64 \
