--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,8 @@ jobs:
         sudo apt install --yes --no-install-recommends build-essential clang lld \
           gcc-x86-64-linux-gnu g++-x86-64-linux-gnu \
           gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu \
-          gcc-mingw-w64-x86-64 \
+          gcc-mingw-w64-x86-64 mingw-w64-x86-64-dev mingw-w64-x86-64-tools \
+          gcc-mingw-w64-aarch64 mingw-w64-aarch64-dev mingw-w64-aarch64-tools \
           musl-tools musl-dev mingw-w64
     - name: Install cross-compliers for musl
       uses: Lesmiscore/musl-cross-compilers@master
