--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: Build all
     env:
       name: "terracotta"
@@ -37,12 +37,15 @@ jobs:
     - name: Install cross-compilers
       run: |
         sudo apt update
-        sudo apt install --yes --no-install-recommends make build-essential clang libclang-dev lld gcc-multilib g++-multilib \
+        sudo apt install --yes --no-install-recommends make build-essential clang libclang-dev lld llvm-dev \
           gcc-x86-64-linux-gnu g++-x86-64-linux-gnu \
           binutils-aarch64-linux-gnu \
           gcc-mingw-w64-x86-64 mingw-w64-x86-64-dev \
+          gcc-mingw-w64-aarch64 \
           musl-tools musl-dev mingw-w64
-        sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
+        wget -O llvm-mingw.tar.xz https://github.com/mstorsjo/llvm-mingw/releases/download/20250709/llvm-mingw-20250709-ucrt-ubuntu-22.04-x86_64.tar.xz
+        tar -xvf llvm-mingw.tar.xz -C ${{github.workspace}}
+        echo "${{github.workspace}}/llvm-mingw/bin" >> $GITHUB_PATH
     - name: Install cross-compliers for musl
       uses: Lesmiscore/musl-cross-compilers@master
       with:
