--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -101,7 +101,7 @@ jobs:
         tag: CIbuild-${{ github.ref_name }}
         deleteOnlyFromDrafts: false
     - name: Update CIbuild-${{ github.ref_name }} tag
-      uses: 8Mi-Tech/action-gh-release-update-tag@main
+      uses: 8Mi-Tech/action-gh-release-update-tag@v2
       if: github.ref_type == 'branch'
       with:
         tag_name: CIbuild-${{ github.ref_name }}
