--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -101,10 +101,11 @@ jobs:
         tag: CIbuild-${{ github.ref_name }}
         deleteOnlyFromDrafts: false
     - name: Update CIbuild-${{ github.ref_name }} tag
-      uses: 8Mi-Tech/action-gh-release-update-tag@v1
+      uses: richardsimko/update-tag@v1
       if: github.ref_type == 'branch'
       with:
         tag_name: CIbuild-${{ github.ref_name }}
+        github_token: ${{ github.token }}
     - name: Upload Prerelease
       uses: softprops/action-gh-release@v1
       if: github.ref_type == 'branch'
