--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build all
+    name: Build All
     env:
       name: "terracotta"
       MACOSX_DEPLOYMENT_TARGET: "11.1"
@@ -34,7 +34,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       name: Git Clone
-    - name: Install cross-compilers
+    - name: Install Cross Compilers (General)
       run: |
         sudo apt update
         sudo apt install --yes --no-install-recommends make build-essential clang libclang-dev lld llvm-dev \
@@ -46,33 +46,26 @@ jobs:
         tar -xf llvm-mingw.tar.xz -C ${{github.workspace}}
         mv -v ${{github.workspace}}/llvm-mingw-* ${{github.workspace}}/llvm-mingw
         echo "${{github.workspace}}/llvm-mingw/bin" >> $GITHUB_PATH
-    - name: Install cross-compliers for musl
+    - name: Install Cross Compliers (musl)
       uses: Lesmiscore/musl-cross-compilers@master
       with:
         target: "aarch64-linux-musl"
-    - uses: Timmmm/setup-osxcross@main
-      name: Install cross-compilers for MacOS (Only Apple Can Do)
+    - name: Install Cross Compliers (MacOS)
+      uses: Timmmm/setup-osxcross@main
       with:
         osx-version: "${{ env.MACOSX_DEPLOYMENT_TARGET }}"
-    - name: Install rustup targets
+    - name: Install Rust Toolchains
       run: |
-        # 将多行字符串转换为空格分隔列表
         rustup target add $(echo "${{ env.targets }}" | tr '\n' ' ')
-    - name: Build all targets (single command)
+    - name: Build All
       id: build
       run: |
         # 执行单命令构建所有目标
         cargo build --release --target $(echo $(echo "${{ env.targets }}" | tr '\n' ' ') | sed 's/ / --target /g')
-    #- name: （仅编译失败后执行）输出Easytier目录内的内容
-      #if: ${{ failure() && steps.build.conclusion == 'failure' }}
-      #run: | 
-        #sudo apt install --yes tree
-        #tree .easytier
-    - name: Run tests
+    - name: Run Tests
       run: cargo test --verbose
-    - name: 整理文件列表
+    - name: Assemble Artifact
       run: |
-        # 将多行字符串转换为数组
         TARGETS=($(echo "${{ env.targets }}"))
         mkdir -p target/output
         for target in "${TARGETS[@]}"; do
@@ -84,33 +77,11 @@ jobs:
               _filename=$(echo $target | sed -e 's/unknown//g; s/pc//g; s/gnullvm//g; s/darwin//g; s/aarch64/arm64/g; s/^\([^-]*\)-\(.*\)/\2-\1/; s/^[[:space:]]*-\+//; s/-\+[[:space:]]*$//; s/[[:space:]]//g; s/--/-/g; ' )
               mv "$src_path" "target/output/$bin_name"-"$_filename$suffix"
           else
-            echo "⚠️ 文件不存在: $src_path"
+            echo "[WARNING] File doesn't exist: $src_path"
           fi
         done
-    - name: Upload Artifacts
+    - name: Upload Artifact
       uses: actions/upload-artifact@v4
-      if: github.event_name == 'pull_request'
       with:
         name: "terracotta-build"
         path: "target/output/*"
-
-    - name: Delete release assets (CIbuild-${{ github.ref_name }})
-      uses: 8Mi-Tech/delete-release-assets-action@main
-      if: github.ref_type == 'branch'
-      with:
-        tag: CIbuild-${{ github.ref_name }}
-        deleteOnlyFromDrafts: false
-    - name: Update CIbuild-${{ github.ref_name }} tag
-      uses: richardsimko/update-tag@v1
-      if: github.ref_type == 'branch'
-      with:
-        tag_name: CIbuild-${{ github.ref_name }}
-        github_token: ${{ github.token }}
-    - name: Upload Prerelease
-      uses: softprops/action-gh-release@v1
-      if: github.ref_type == 'branch'
-      with:
-        tag_name: CIbuild-${{ github.ref_name }}
-        files: |
-          target/output/*
-        prerelease: true
