--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -85,3 +85,24 @@ jobs:
       with:
         name: "terracotta-build"
         path: "target/output/*"
+    - name: Delete release assets (CIbuild-${{ github.ref_name }})
+      uses: 8Mi-Tech/delete-release-assets-action@main
+      if: github.ref_type == 'branch'
+      with:
+        tag: CIbuild-${{ github.ref_name }}
+        deleteOnlyFromDrafts: false
+    - name: Update CIbuild-${{ github.ref_name }} tag
+      uses: richardsimko/update-tag@v1
+      if: github.ref_type == 'branch'
+      with:
+        tag_name: CIbuild-${{ github.ref_name }}
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+    - name: Upload Prerelease
+      uses: softprops/action-gh-release@v1
+      if: github.ref_type == 'branch'
+      with:
+        tag_name: CIbuild-${{ github.ref_name }}
+        files: |
+          target/output/*
+        prerelease: true
