--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,6 +66,13 @@ jobs:
     # 准备缓存 Cargo 内容
     - name: Generate Cargo.lock file
       run: cargo generate-lockfile
+    - name: Check Action Event Type
+      id: cargo-cache-check
+      run: |
+        case "${{ github.event_name }}" in
+          "push") echo "type=full" >> "$GITHUB_OUTPUT"; echo "path=target" >> "$GITHUB_OUTPUT" ;;
+          "pull_request") echo "type=mini" >> "$GITHUB_OUTPUT" ;;
+        esac
     - name: Cargo Cache Restore or Save
       id: cargo-cache
       uses: actions/cache@v4
@@ -73,13 +80,14 @@ jobs:
         path: |
           ~/.cargo/registry
           ~/.cargo/git
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          ${{ steps.cargo-cache-check.outputs.path }}
+        key: ${{ runner.os }}-cargo-${{ steps.cargo-cache-check.outputs.type }}-${{ hashFiles('**/Cargo.lock') }}
     - name: Clean Old Cargo Cache
-      if:  steps.cargo-cache.outputs.cache-hit != 'true'
+      if:  ${{ github.event_name == 'push' && steps.cargo-cache.outputs.cache-hit != 'true' }}
       uses: yumemi-inc/clean-cache-action@v1
       with:
         ref: ${{ github.ref }}
-        key: ${{ runner.os }}-cargo-
+        key: ${{ runner.os }}-cargo-full-
     # 进入编译流程
     - name: Install Rust Toolchains
       run: |
