--- a/.github/workflows/pr-closed.yaml
+++ b/.github/workflows/pr-closed.yaml
@@ -1,5 +1,4 @@
-name: PR Closed Clean
-on:
+name: PR Closed Cleanon:
   pull_request:
     types:
       - closed
@@ -12,4 +11,4 @@ jobs:
     steps:
       - uses: yumemi-inc/clean-cache-action@v1
         with:
-          ref: '${{ github.ref }}'
+          ref: 'refs/pull/${{ github.event.pull_request.number }}/merge'
