--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,16 +9,23 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  #
   CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
   CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_AR: aarch64-linux-gnu-ar
+  #
   CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER: aarch64-linux-musl-gcc
   CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_AR: aarch64-linux-musl-ar
+  #
+  CARGO_TARGET_X86_64_PC_WINDOWS_GNU_RESOURCE_COMPILER: "${{github.workspace}}/llvm-mingw/bin/x86_64-w64-mingw32-windres"
+  #
   CARGO_TARGET_X86_64_PC_WINDOWS_GNULLVM_LINKER: "${{github.workspace}}/llvm-mingw/bin/x86_64-w64-mingw32-clang"
   CARGO_TARGET_X86_64_PC_WINDOWS_GNULLVM_AR: "${{github.workspace}}/llvm-mingw/bin/x86_64-w64-mingw32-ar"
+  CARGO_TARGET_X86_64_PC_WINDOWS_GNULLVM_RESOURCE_COMPILER: "${{github.workspace}}/llvm-mingw/bin/llvm-rc"
+  #
   CARGO_TARGET_AARCH64_PC_WINDOWS_GNULLVM_LINKER: "${{github.workspace}}/llvm-mingw/bin/aarch64-w64-mingw32-clang"
   CARGO_TARGET_AARCH64_PC_WINDOWS_GNULLVM_AR: "${{github.workspace}}/llvm-mingw/bin/aarch64-w64-mingw32-ar"
-  RC: ${{github.workspace}}/llvm-mingw/bin/llvm-rc
-  #RUSTFLAGS: "-C target-feature=+crt-static"
+  CARGO_TARGET_AARCH64_PC_WINDOWS_GNULLVM_RESOURCE_COMPILER: "${{github.workspace}}/llvm-mingw/bin/llvm-rc"
+  #
   name: "terracotta"
   MACOSX_DEPLOYMENT_TARGET: "11.1"
   RUST_BACKTRACE: "full"
