[skip ci] Update Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,7 @@ opt-level = "z"
 lto = true
 codegen-units = 1
 panic = "abort"
+
+[package.metadata.winresource]
+OriginalFilename = "terracotta-windows.exe"
+#LegalCopyright = "Copyright © 2016"
