--- a/.github/.cargo/config.toml
+++ b/.github/.cargo/config.toml
@@ -3,10 +3,10 @@ rustflags = ["-C", "target-feature=+crt-static"]
 [target.x86_64-pc-windows-gnullvm]
 rustflags = [
   "-C", "target-feature=+crt-static",  # 静态链接CRT
-  "-C", "link-args=/ALIGN:4096",
+  "-C", "link-args=-Wl,--section-alignment=4096",
 ]
 [target.aarch64-pc-windows-gnullvm]
 rustflags = [
   "-C", "target-feature=+crt-static",  # 静态链接CRT
-  "-C", "link-args=/ALIGN:4096",
+  "-C", "link-args=-Wl,--section-alignment=4096",
 ]
