Move easytier binary compile-time location and cache them.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,6 +62,7 @@ jobs:
           ~/.cargo/registry
           ~/.cargo/git
           target
+          .easytier
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
     - name: Install LLVM-Mingw
       run: |
